[gd_scene load_steps=6 format=2]

[ext_resource path="res://screens/GooglePlayBilling.gd" type="Script" id=1]
[ext_resource path="res://screens/skin_screen/ShopHTTPRequest.gd" type="Script" id=2]
[ext_resource path="res://BillingTest.gd" type="Script" id=3]
[ext_resource path="res://screens/skin_screen/SkinButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://screens/skin_screen/goku-mouse.svg" type="Texture" id=5]

[node name="Node" type="Node"]
script = ExtResource( 3 )

[node name="SkinButton" parent="." instance=ExtResource( 4 )]
margin_left = 562.0
margin_top = 291.0
margin_right = 690.0
margin_bottom = 419.0
texture_normal = ExtResource( 5 )
asset_id = "117772"

[node name="ShopHTTPRequest" type="HTTPRequest" parent="."]
script = ExtResource( 2 )

[node name="GooglePlayBilling" type="Node" parent="."]
script = ExtResource( 1 )

[connection signal="pressed" from="SkinButton" to="." method="_on_SkinButton_pressed" binds= [ 112764 ]]
